--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,40 +1,51 @@
-name: Build and Push Docker Image
+name: Build, Push Docker Image & Update GitOps
 
 on:
   push:
     branches: [main]
 
 jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
+  build-push-update:
+    runs-on: windows-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout app repo
         uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-      - name: Build Docker image
+
+      - name: Build and push Docker image
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/my-nodejs-app:${{ github.sha }} .
           docker tag ${{ secrets.DOCKERHUB_USERNAME }}/my-nodejs-app:${{ github.sha }} ${{ secrets.DOCKERHUB_USERNAME }}/my-nodejs-app:latest
-
-      - name: Push Docker images
-        run: |
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/my-nodejs-app:${{ github.sha }}
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/my-nodejs-app:latest
 
-      # OPTIONAL: Auto-update image tag in the GitOps repo with a commit/PR
-      # You can automate K8s manifest update in the GitOps repo using "EndBug/add-and-commit" or a similar action
-      # See below for an example step (requires repo write access set up)
+      - name: Checkout GitOps repo
+        uses: actions/checkout@v4
+        with:
+          repository: <your-org>/<gitops-repo>
+          token: ${{ secrets.GITOPS_PAT }}
+          path: gitops-repo
 
-      # - name: Update image tag in GitOps repo
-      #   run: |
-      #     # clone, modify k8s YAML, commit, push
-      #   env:
-      #     GITOPS_REPO: https://github.com/<your-org>/<gitops-repo>.git
-      #     GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+      - name: Update deployment yaml image tag (PowerShell)
+        shell: pwsh
+        run: |
+          $deployPath = 'gitops-repo/app/deployment.yaml'
+          (Get-Content $deployPath) -replace 'image: .+', 'image: ${{ secrets.DOCKERHUB_USERNAME }}/my-nodejs-app:${{ github.sha }}' | Set-Content $deployPath
 
+      - name: Commit & push updated image tag
+        shell: pwsh
+        run: |
+          cd gitops-repo
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add app/deployment.yaml
+          git commit -m "Update image tag to ${{ github.sha }} [CI skip]"
+          git push
