--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build-push-update:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout app repo
         uses: actions/checkout@v4
